--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -51,8 +51,10 @@
   .card
     &-info
       flex-wrap: wrap
-    &__rating
-      flex-basis: 100%
+    &s
+      .card
+        &__rating
+          flex-basis: 100%
     &__title
       font-size: 18px
   .footer
