--- a/src/sass/blocks/_promo.sass
+++ b/src/sass/blocks/_promo.sass
@@ -1,4 +1,5 @@
 .promo
+  margin-bottom: 56px
   &-block
     background: $promo-color url(../img/promo/promo-bg.png) no-repeat top right
     padding: 68px
