--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -22,7 +22,10 @@ main
     width: 306px
     background: url(../img/restaurants/search-icon.svg) no-repeat left 11px center
     padding: 4px 35px
+    margin-left: auto
 .button
+  display: flex
+  align-items: center
   padding: 8px 16px
   background: #FFFFFF
   border: 1px solid $border-color
@@ -30,14 +33,16 @@ main
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.0015)
   border-radius: 2px
   font-size: 16px
+  line-height: 24px
   &s
+    display: flex
+    align-items: center
     &__login
-      background: url(../img/header/login.svg) no-repeat left 16px center
       background-color: $button-color
       border-color: $button-color
       color: #fff
-      padding-left: 36px
       margin-right: 10px
     &__shop
-      background: url(../img/header/shopping-cart.svg) no-repeat left 16px center
-      padding-left: 36px
+      color: $footer-text-color
+    &__icon
+      margin-right: 6px
