--- a/src/sass/blocks/_restaurants.sass
+++ b/src/sass/blocks/_restaurants.sass
@@ -1,8 +1,7 @@
 .restaurants
-  padding: 56px 0 85px
+  padding-bottom: 85px
   &-heading
     display: flex
-    justify-content: space-between
     align-items: center
     margin-bottom: 44px
   &__title
@@ -10,13 +9,17 @@
     font-weight: 700
     font-size: 36px
     line-height: 42px
+    margin-right: 30px
 .card
-  flex-basis: 31%
+  flex-basis: 32%
   background: #FFFFFF
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.05)
   border-radius: 7px
   margin-bottom: 30px
   overflow: hidden
+  text-decoration: none
+  &:visited
+    color: #000
   &s
     display: flex
     align-items: flex-start
@@ -24,7 +27,6 @@
     flex-wrap: wrap
   &__img
     width: 384px
-    height: 250px
     object-fit: cover
   &-text
     padding: 20px 23px 35px
@@ -37,6 +39,8 @@
     font-weight: 700
     font-size: 24px
     line-height: 32px
+    &_reg
+      font-weight: 400
   &__tag
     background-color: $tag-color
     color: #fff
@@ -62,6 +66,11 @@
     color: $text-color
   &__price
     margin-right: 10px
+    &_bold
+      font-weight: 700
+      font-size: 20px
+      line-height: 32px
+      margin-left: 30px
     &::after
       content: ''
       width: 5px
@@ -76,3 +85,15 @@
     overflow: 
     white-space: nowrap
     max-width: 150px
+  &__ingridients
+    margin-top: 10px
+    margin-bottom: 25px
+    font-size: 18px
+    font-weight: 400
+    line-height: 21px
+    color: $text-color
+  &-buttons
+    display: flex
+    align-items: center
+    &__icon
+      margin-left: 5px
