--- a/src/css/main.css
+++ b/src/css/main.css
@@ -67,14 +67,14 @@ main {
           align-items: center;
 }
 
-.buttons__login {
+.buttons__primary {
   background-color: #1890FF;
   border-color: #1890FF;
   color: #fff;
   margin-right: 10px;
 }
 
-.buttons__shop {
+.buttons__secondary {
   color: #595959;
 }
 
@@ -340,6 +340,149 @@ main {
 
 .social__link:not(:last-child) {
   margin-right: 21px;
+}
+
+.modal {
+  position: fixed;
+  display: none;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.modal-dialog {
+  margin: auto;
+  padding: 40px 45px;
+  max-width: 780px;
+  width: 95%;
+  min-height: 552px;
+  background: #fff;
+  border-radius: 5px;
+}
+
+.modal-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 45px;
+}
+
+.modal__title {
+  margin: 0;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+}
+
+.modal-food {
+  margin-bottom: 52px;
+}
+
+.modal-food__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-bottom: 8px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid #D9D9D9;
+}
+
+.modal-food__price {
+  margin-left: auto;
+  margin-right: 47px;
+}
+
+.modal-food__name {
+  font-size: 18px;
+  line-height: 32px;
+}
+
+.modal-food__price {
+  font-size: 20px;
+  line-height: 32px;
+  font-weight: 700;
+}
+
+.modal-food__counter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.modal-food__counter__button {
+  width: 39px;
+  height: 32px;
+  background: #FFFFFF;
+  border: 1px solid #40A9FF;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 2px;
+  font-size: 14px;
+  background-image: 22px;
+  color: #40A9FF;
+}
+
+.modal-food__counter__text {
+  font-size: 16px;
+  line-height: 24px;
+  margin: 0 13px;
+}
+
+.modal-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.modal-footer__tag {
+  background-color: #262626;
+  border-radius: 5px;
+  padding: 15px 20px;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 23px;
+}
+
+.modal-footer__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.close {
+  font-size: 36px;
+  border: none;
+  background-color: transparent;
+}
+
+.active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 @media (max-width: 1200px) {
