--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -37,12 +37,12 @@ main
   &s
     display: flex
     align-items: center
-    &__login
+    &__primary
       background-color: $button-color
       border-color: $button-color
       color: #fff
       margin-right: 10px
-    &__shop
+    &__secondary
       color: $footer-text-color
     &__icon
       margin-right: 6px
