--- a/src/sass/blocks/_promo.sass
+++ b/src/sass/blocks/_promo.sass
@@ -1,7 +1,7 @@
 .promo
   margin-bottom: 56px
   &-block
-    background: $promo-color url(../img/promo/promo-bg.png) no-repeat top right
+    background: $promo-color url(../img/promo/vegetables.png) no-repeat top right
     padding: 68px
     border-radius: 10px
     box-shadow: 0px 7px 12px rgba(158, 158, 163, 0.1)
