--- a/src/css/main.css
+++ b/src/css/main.css
@@ -27,14 +27,14 @@ main {
   -webkit-box-flex: 0.8;
       -ms-flex: 0.8;
           flex: 0.8;
-  background: url(../img/header/home.svg) no-repeat left 11px center;
+  background: url(../img/icons/home.svg) no-repeat left 11px center;
   padding: 8px 35px;
 }
 
 .input__search {
   height: 34px;
   width: 306px;
-  background: url(../img/restaurants/search-icon.svg) no-repeat left 11px center;
+  background: url(../img/icons/search-icon.svg) no-repeat left 11px center;
   padding: 4px 35px;
   margin-left: auto;
 }
@@ -58,6 +58,10 @@ main {
   line-height: 24px;
 }
 
+.button:not(:first-child) {
+  margin-left: 10px;
+}
+
 .buttons {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -67,19 +71,24 @@ main {
           align-items: center;
 }
 
+.buttons__icon {
+  margin-right: 6px;
+  height: 15px;
+}
+
 .buttons__primary {
   background-color: #1890FF;
   border-color: #1890FF;
   color: #fff;
-  margin-right: 10px;
 }
 
-.buttons__secondary {
+.buttons__cart {
   color: #595959;
+  display: none;
 }
 
-.buttons__icon {
-  margin-right: 6px;
+.buttons__logout {
+  display: none;
 }
 
 .header {
@@ -103,7 +112,7 @@ main {
 }
 
 .promo-block {
-  background: #FFF1B8 url(../img/promo/promo-bg.png) no-repeat top right;
+  background: #FFF1B8 url(../img/promo/vegetables.png) no-repeat top right;
   padding: 68px;
   border-radius: 10px;
   -webkit-box-shadow: 0px 7px 12px rgba(158, 158, 163, 0.1);
@@ -126,10 +135,6 @@ main {
   max-width: 530px;
 }
 
-.restaurants {
-  padding-bottom: 85px;
-}
-
 .restaurants-heading {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -137,7 +142,7 @@ main {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 44px;
+  margin-bottom: 55px;
 }
 
 .restaurants__title {
@@ -179,12 +184,21 @@ main {
 }
 
 .card__img {
-  width: 384px;
+  width: 100%;
+  height: 250px;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
 .card-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-height: auto;
   padding: 20px 23px 35px;
 }
 
@@ -198,6 +212,7 @@ main {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-bottom: 10px;
 }
 
 .card__title {
@@ -229,7 +244,7 @@ main {
 }
 
 .card__rating {
-  background: url(../img/restaurants/rating-star.svg) no-repeat left top 7px;
+  background: url(../img/icons/rating-star.svg) no-repeat left top 7px;
   padding-left: 22px;
   color: #FFC107;
   font-size: 18px;
@@ -254,6 +269,7 @@ main {
   font-size: 20px;
   line-height: 32px;
   margin-left: 30px;
+  margin-bottom: 6px;
 }
 
 .card__price::after {
@@ -274,8 +290,6 @@ main {
 }
 
 .card__ingridients {
-  margin-top: 10px;
-  margin-bottom: 25px;
   font-size: 18px;
   font-weight: 400;
   line-height: 21px;
@@ -286,13 +300,39 @@ main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  margin-top: 24px;
 }
 
 .card-buttons__icon {
   margin-left: 5px;
+}
+
+.menu-heading {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 55px;
+}
+
+.menu__title {
+  margin: 0;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+  margin-right: 30px;
+}
+
+.menu .card-text {
+  min-height: 275px;
 }
 
 .footer {
@@ -659,6 +699,12 @@ main {
   .footer__link:not(:last-child) {
     margin-right: 0;
     margin-bottom: 8px;
+  }
+  .card-buttons__icon {
+    display: none;
+  }
+  .card__price_bold {
+    margin-left: 0;
   }
 }
 /*# sourceMappingURL=main.css.map */
