--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -120,3 +120,10 @@
     &__link:not(:last-child)
       margin-right: 0
       margin-bottom: 8px
+  .card
+    &-buttons
+      &__icon
+        display: none
+    &__price
+      &_bold
+        margin-left: 0
