--- a/src/sass/blocks/_restaurants.sass
+++ b/src/sass/blocks/_restaurants.sass
@@ -1,9 +1,8 @@
 .restaurants
-  padding-bottom: 85px
   &-heading
     display: flex
     align-items: center
-    margin-bottom: 44px
+    margin-bottom: 55px
   &__title
     margin: 0
     font-weight: 700
@@ -26,14 +25,19 @@
     justify-content: space-between
     flex-wrap: wrap
   &__img
-    width: 384px
+    width: 100%
+    height: 250px
     object-fit: cover
   &-text
+    display: flex
+    flex-direction: column
+    min-height: auto
     padding: 20px 23px 35px
   &-heading
     display: flex
     justify-content: space-between
     align-items: center
+    margin-bottom: 10px
   &__title
     margin: 0
     font-weight: 700
@@ -52,7 +56,7 @@
     display: flex
     flex-wrap: wrap
   &__rating
-    background: url(../img/restaurants/rating-star.svg) no-repeat left top 7px
+    background: url(../img/icons/rating-star.svg) no-repeat left top 7px
     padding-left: 22px
     color: $rating-color
     font-size: 18px
@@ -71,6 +75,7 @@
       font-size: 20px
       line-height: 32px
       margin-left: 30px
+      margin-bottom: 6px
     &::after
       content: ''
       width: 5px
@@ -86,14 +91,14 @@
     white-space: nowrap
     max-width: 150px
   &__ingridients
-    margin-top: 10px
-    margin-bottom: 25px
     font-size: 18px
     font-weight: 400
     line-height: 21px
     color: $text-color
   &-buttons
     display: flex
-    align-items: center
+    align-items: flex-end
+    flex-grow: 1
+    margin-top: 24px
     &__icon
       margin-left: 5px
