--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -4,6 +4,7 @@
 @import 'blocks/header'
 @import 'blocks/promo'
 @import 'blocks/restaurants'
+@import 'blocks/menu'
 @import 'blocks/footer'
 @import 'blocks/modal'
 
