--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -23,6 +23,11 @@ main
     background: url(../img/icons/search-icon.svg) no-repeat left 11px center
     padding: 4px 35px
     margin-left: auto
+.username
+  display: none
+  margin-right: 20px
+  font-weight: bold
+  font-size: 18px
 .button
   display: flex
   align-items: center
