--- a/src/sass/blocks/_modal.sass
+++ b/src/sass/blocks/_modal.sass
@@ -1,20 +1,33 @@
 .modal
-  position: fixed
-  display: none
-  left: 0
-  top: 0
-  width: 100%
-  height: 100%
-  background: rgba(0, 0, 0, 0.4)
+  &-cart
+    position: fixed
+    display: none
+    left: 0
+    top: 0
+    width: 100%
+    height: 100%
+    background: rgba(0, 0, 0, 0.4)
+  &-auth
+    position: fixed
+    display: none
+    left: 0
+    top: 0
+    width: 100%
+    height: 100%
+    background: rgba(0, 0, 0, 0.4)
   &-dialog
     margin: auto
     padding: 40px 45px
     max-width: 780px
     width: 95%
-    min-height: 552px
     background: #fff
     opacity: 
     border-radius: 5px
+  &-login
+    width: auto
+    position: relative
+    .modal-footer
+      justify-content: flex-end
   &-header
     display: flex
     justify-content: space-between
@@ -75,9 +88,23 @@
     &__buttons
       display: flex
       align-items: center
+  &-body
+    margin: 0
+    margin-bottom: 25px
+.label
+  &-login
+    display: block
+    margin: 30px
+    span
+      width: 80px
+      display: inline-block
 .close
   font-size: 36px
   border: none
   background-color: transparent
+  &-login
+    position: absolute
+    top: 10px
+    right: 20px
 .active
   display: flex
