--- a/src/css/main.css
+++ b/src/css/main.css
@@ -65,6 +65,10 @@ main {
   line-height: 24px;
 }
 
+.button:hover {
+  cursor: pointer;
+}
+
 .button:not(:first-child) {
   margin-left: 10px;
 }
@@ -89,9 +93,17 @@ main {
   color: #fff;
 }
 
+.buttons__primary:hover {
+  background-color: #0071da;
+}
+
 .buttons__cart {
   color: #595959;
   display: none;
+}
+
+.buttons__cart:hover {
+  background-color: #e0e0e0;
 }
 
 .buttons__logout {
