Реализовал добавление карточек ресторанов и товаров при помощи js

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -110,6 +110,16 @@ main {
   display: none;
 }
 
+.active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.hide {
+  display: none;
+}
+
 .header {
   padding: 40px 0;
 }
